# mcp-explorer

./: .gitignore  CLAUDE.md  PROXY_USAGE_GUIDE.md  QUICKSTART.md  README.md  mcp.json  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: Architect.agent.md  Developer.agent.md  Simple-Architect.agent.md  Simple-Developer.agent.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  configuration_and_features.md  fastmcp_v3_proxy_debugging.md  http_streaming_implementation.md  live_log_updates_implementation.md  project_overview.md  proxy_implementation_details.md  suggested_commands.md  task_completion_checklist.md
docs/: CONFIG_FORMATS.md  HTTP_STREAMING_SUPPORT.md  claude_config_example.json  copilot_config_example.json
mcp_explorer/: __init__.py  main.py
mcp_explorer/models/: __init__.py  config_file.py  log_entry.py  prompt.py  proxy_config.py  resource.py  server.py  tool.py
mcp_explorer/proxy/: __init__.py  logger.py  server.py
mcp_explorer/services/: __init__.py  client.py  config_loader.py  discovery.py
mcp_explorer/ui/: __init__.py  app.py  dialogs.py  log_viewer_screen.py  log_widgets.py  proxy_config_screen.py  screens.py  styles.tcss  tool_terminal_screen.py  widgets.py
plans/: fastmcp-v3-upgrade.md
tests/: __init__.py  test_all_configs.py  test_app_startup.py  test_async_discovery.py  test_config.py  test_config_discovery.py  test_config_only.py  test_discovery.py  test_multi_config.py  test_proxy_restart.py  test_splash.py  test_splash_animation.py
